# dext

./: .gitignore  app.pen  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  install.sh  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: database_manager.rs  docker_manager.rs  mod.rs  openvpn_manager.rs  password_manager.rs
src/components/layout/: layout.tsx  sidebar.module.css  sidebar.tsx
src/components/shared/: action-button.module.css
src/components/tools/: database-manager-tool.module.css  database-manager-tool.tsx  docker-dashboard-tool.module.css  docker-dashboard-tool.tsx  hash-generator-tool.module.css  hash-generator-tool.tsx  http-runner-tool.module.css  http-runner-tool.tsx  json-formatter-tool.tsx  mock-generator-tool.module.css  openvpn-manager-tool.tsx  password-manager-tool.module.css  password-manager-tool.tsx  regex-tester-tool.module.css  regex-tester-tool.tsx  secret-generator-tool.module.css  secret-generator-tool.tsx  timestamp-converter-tool.module.css  timestamp-converter-tool.tsx  url-encoder-tool.module.css  url-encoder-tool.tsx
src/services/: database-manager.service.ts  docker-dashboard.service.ts  hash.service.ts  http-runner.service.ts  json-formatter.service.ts  password-manager.service.ts  regex.service.ts  timestamp.service.ts  url-encoder.service.ts
src/types/: index.ts
