[package]
name = "Dext"
version = "2.3.0"
description = "A collection of essential local developer tools"
authors = ["dext"]
edition = "2021"

[lib]
name = "dext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["net", "fs", "io-util", "time", "rt", "sync", "macros", "process"] }
hickory-resolver = { version = "0.25", features = ["tokio"] }
rustls = "0.23"
x509-parser = "0.16"
webpki-roots = "1"
bollard = "0.18"
notify = "8"
chrono = "0.4"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "chrono", "json", "postgres", "mysql", "sqlite"] }
tauri-plugin-dialog = "2.7.0"
